# spark

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  execute.sh  install.sh
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
hooks/: 90-ignix-kernel.install  90-ignix.install
ignix-cli/: Cargo.toml
ignix-cli/src/: cli.rs  config.rs  main.rs  system.rs  utils.rs
ignix-cli/src/boot/: crc32.rs  disk.rs  esp.rs  gpt.rs  mod.rs  sysfs.rs
ignix-cli/src/cli/: args.rs  interface.rs  mod.rs  parser.rs  validate.rs
ignix-cli/src/commands/: add.rs  check.rs  clean.rs  help.rs  hook.rs  install.rs  list.rs  locate_esp.rs  mod.rs  remove.rs  uninstall.rs  update.rs
ignix-cli/src/errors/: cmd.rs  io.rs  mod.rs  nvram.rs
ignix-loader/: Cargo.toml
ignix-loader/.cargo/: config.toml
ignix-loader/src/: configuration.rs  macros.rs  main.rs  panic_handler.rs  uefi.rs
ignix-loader/src/uefi/: header.rs  mod.rs  system_table.rs  types.rs
ignix-loader/src/uefi/system/: header.rs  mod.rs  table.rs
scripts/: install-targets.sh  only-loader.sh  try-virtual-machine.sh
spark-cli/: Cargo.toml
spark-cli/src/: cli.rs  main.rs
spark-cli/src/boot/: esp.rs  gpt.rs
spark-cli/src/commands/: help.rs  install.rs  remove.rs
spark-cli/src/errors/: cmd.rs  io.rs  mod.rs
spark-loader/: Cargo.toml
spark-loader/src/: kernel.rs
src/: configuration.rs  input.rs  kernel.rs  main.rs
