# Different targets so I decided to split it in 2 different packages
[workspace]
members = [
  "ignix-cli",
  "ignix-loader"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# Making it "panic = abort" reduces the binary size a lot.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
strip = true
