[package]
name = "spark-loader"
version.workspace = true
edition.workspace = true
description = "Boot loader core made purely in Rust to ensure stability and speed."
license.workspace = true

[[bin]]
name = "ignixx64"
path = "src/main.rs"

[dependencies]
uefi = { version = "0.36.1", features = ["default", "alloc", "global_allocator", "panic_handler"] }
